<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_naranja"
    tools:context=".MainActivity2_VerAlumnos">

    <TextView
        android:id="@+id/tv_alumnos"
        android:layout_width="179dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="202dp"
        android:text="@string/tv_alumnos"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_lista_alumnos"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/tv_alumnos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="46dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/btn_volver"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/spinner_lista_alumnos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="256dp"
        android:backgroundTint="#4FE62828"
        android:onClick="btnVolver"
        android:text="@string/btn_volver"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_ver_tutor"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/spinner_lista_alumnos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="left"
        android:layout_marginStart="237dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="#E33737"
        android:text="@string/btn_ver_tutor"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:layout_below="@+id/btn_ver_tutor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_apellido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_apellido2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_dni"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txt_observaciones"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:ems="10"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>